--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="bottom">
             <div class="card">
                 <div class="card-image">
-                    <img src="/HTML&CSS/templetes/assets/biriyani.jpg" alt="Chicken Biriyani">
+                    <img src="assets/biriyani.jpg" alt="Chicken Biriyani">
                 </div>
                 <div class="card-info">
                     <p class="card-info-1">Lunch/Biriyani</p>
@@ -27,7 +27,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="/HTML&CSS/templetes/assets/chepala pulusu.png" alt="Chepala Pulusu">
+                    <img src="assets/chepala pulusu.png" alt="Chepala Pulusu">
                 </div>
                 <div class="card-info">
                     <p class="card-info-1">Lunch/Curry</p>
@@ -39,7 +39,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="/HTML&CSS/templetes/assets/gongura mutton.png" alt="Gongura Mutton">
+                    <img src="assets/gongura mutton.png" alt="Gongura Mutton">
                 </div>
                 <div class="card-info">
                     <p class="card-info-1">Lunch/Curry</p>
@@ -51,7 +51,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="/HTML&CSS/templetes/assets/veg meal.png" alt="Veg Meal">
+                    <img src="assets/veg meal.png" alt="Veg Meal">
                 </div>
                 <div class="card-info">
                     <p class="card-info-1">Lunch/Meal</p>
@@ -63,7 +63,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="/HTML&CSS/templetes/assets/naatu kodi.png" alt="Naatu Kodi">
+                    <img src="assets/naatu kodi.png" alt="Naatu Kodi">
                 </div>
                 <div class="card-info">
                     <p class="card-info-1">Lunch/Curry</p>
@@ -75,7 +75,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="/HTML&CSS/templetes/assets/raagi sangati.png" alt="Raagi Sangatii">
+                    <img src="assets/raagi sangati.png" alt="Raagi Sangatii">
                 </div>
                 <div class="card-info">
                     <p class="card-info-1">Breakfast/Sangati</p>
